--- a/Library-System/Site.Master
+++ b/Library-System/Site.Master
@@ -1,4 +1,5 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="Library_System.SiteMaster" %>
+
 <%@ Register Src="~/Controls/ErrorSuccessNotifier/ErrorSuccessNotifier.ascx" 
     TagPrefix="notifier" TagName="ErrorSuccessNotifier" %>
 <!DOCTYPE html>
@@ -8,7 +9,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%: Page.Title %> - My ASP.NET Application</title>
-
 
 
     <asp:PlaceHolder runat="server">
@@ -105,7 +105,7 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - Library System</p>
+                <p>&copy; <%: DateTime.Now.Year %> - Library System by Dilyan Dichov</p>
             </footer>
         </div>
 
